// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index page Renders auth Exists 1`] = `
<mockConstructor
  query={
    Object {
      "data": Array [
        "
  query HomeQuery {
    ...HomeFragment
  }
  ",
        "
",
      ],
    }
  }
>
  <Component />
</mockConstructor>
`;

exports[`Index page Renders auth Query Data 1`] = `
<Home
  data="Test Data"
/>
`;

exports[`Index page Renders auth Query Error 1`] = `
<div>
  Test Error
</div>
`;

exports[`Index page Renders auth Query Loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`Index page Renders unauth 1`] = `
<WithStyles(Card)>
  <WithStyles(CardContent)>
    <div
      role="navigation"
    >
      <mockConstructor
        prefetch={true}
        route="auth/sign-in"
      >
        <a>
          Sign In
        </a>
      </mockConstructor>
    </div>
    <div
      role="main"
    >
      <h1>
        Hello World
      </h1>
      <div>
        This will be the landing page for Condor Club.
      </div>
    </div>
  </WithStyles(CardContent)>
</WithStyles(Card)>
`;
